Fix margins
By adding margin-bottom, it fixed the too large bottom margin for
title section.

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -14,11 +14,12 @@ body {
   margin-top: 0px;
   margin-left: 0px;
   margin-right: 0px;
+  margin-bottom: 8px;
   padding-left: 8px;
   padding-top: 8px;
   background: #e3f4ff;
-  margin: 8px;
-  font-size: 16px;;
+  font-size: 16px;
+  padding-bottom: 8px;
 }
 
 .content {
@@ -32,10 +33,11 @@ body {
 
 .button-container {
   background: #e3f4ff;
-  margin-left: 8px;
-  margin-bottom: 8px;
+  margin-left: 0px;
+  margin-bottom: 0px;
   margin-right: 0px;
   padding: 8px;
+  margin-top: 8px;
   text-align: center;
 }
 
